Second commit : link to the sources + our GitHub repository

--- a/TourismProject.qmd
+++ b/TourismProject.qmd
@@ -28,7 +28,20 @@ TerrorDeath<-read.csv("Datas/terrorism-deaths.csv",sep=";")
 Forest<-read.csv("Datas/propofprotectedforests.csv",sep=";")
 ```
 
+# II. Sources and GitHub
 
+You can have access tot the source of our data by clicking on the name of the variable :
+
+-   [Average expenditures by tourist](https://ourworldindata.org/grapher/average-expenditures-of-international-tourists-domestically?tab=table)   
+-   [Gross Domestic Product per capita](https://ourworldindata.org/economic-growth#all-charts)
+-   [Gini Coefficient](https://ourworldindata.org/grapher/economic-inequality-gini-index)
+-   [Number of arrivals](https://data.worldbank.org/indicator/ST.INT.ARVL?end=2020&most_recent_year_desc=false&start=2020&view=bar)
+-   [Happiness and life satisfaction](https://ourworldindata.org/happiness-and-life-satisfaction)
+-   [Food expenditure](https://ourworldindata.org/grapher/food-expenditure-per-person-per-year?tab=table)
+-   [GDP per capita](https://ourworldindata.org/grapher/gdp-per-capita-worldbank?tab=table)
+-   [Terrorism death](https://ourworldindata.org/grapher/terrorism-deaths)
+   
+Click [here](https://github.com/jinane1amal/DataRproject.git) to access to our GitHub project.
 
 
 
