--- a/TourismProject.qmd
+++ b/TourismProject.qmd
@@ -535,5 +535,42 @@ As we embark on this research trail, the pivotal question arises: "What makes a 
 This question will focus on a comparison study between 2 years 2019 & 2020 :
 2019 which will represent the initial tourism trends before the pandemic and 2020 will show us how the covid pandemic impacted these tourism trends through the evolution of the chosen variables 
 This query seeks to unravel the distinct elements that shape a nation's allure, delving into cultural, environmental, infrastructural and economy oriented facets that draw visitors. By exploring this question, we aim to not only enrich our comprehension of travel dynamics but also contribute valuable insights to the ongoing dialogue on global tourism trends.
-In evaluating a country's tourism success, we have opted to employ a dual-variable approach, focusing on the number of tourist arrivals and their average expenditure during visits. The number of arrivals serves as a primary indicator, reflecting the appeal and popularity of a destination, while average expenditure provides insights into the economic impact of tourism. To understand the influencing factors, we consider various variables. Gross Domestic Product (GDP) reflects the economic strength of a nation, potentially correlating with tourism appeal. Gini coefficient measures income inequality, influencing the distribution of tourist spending. The Happiness Ladder index gauges the overall well-being of a country's population, potentially affecting its attractiveness to visitors. The proportion of protected forests contribute to environmental considerations, influencing sustainable tourism. We also took the food expenditures as another indicator of the affordability experiencing a country's culinary traditions. Lastly, we chose as another variable the number of terrorist attacks per country reflecting the potential danger tourists will face if they visit a country .
+In evaluating a country's tourism success, we are focusing on the number of tourist arrivals. The number of arrivals serves as a primary indicator, reflecting the appeal and popularity of a destination, while average expenditure provides insights into the economic impact of tourism. To understand the influencing factors, we consider various variables. Gross Domestic Product (GDP) reflects the economic strength of a nation, potentially correlating with tourism appeal. Gini coefficient measures income inequality, influencing the distribution of tourist spending. The Happiness Ladder index gauges the overall well-being of a country's population, potentially affecting its attractiveness to visitors. The proportion of protected forests contribute to environmental considerations, influencing sustainable tourism. We also took the food expenditures as another indicator of the affordability experiencing a country's culinary traditions. Lastly, we chose as another variable the number of terrorist attacks per country reflecting the potential danger tourists will face if they visit a country .
+
+# VI. Graphical representation of the main variable
+
+To have a proper representation of our main target variable, we will first transform our data into a long data, to have a column for the two different years. 
+```{r}
+datalong<-gather(Arrivals19vs20,key="Years",value="Values",-Country, -Code)
+```
+
+Now we can, using the ggplot2 library, have the graphical representation :
+
+```{r}
+ggplot(datalong, aes(x = Country, y = Values)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  facet_wrap(~Years) +
+  labs(title = "Numbers of arrivals in each country in 2019 and 2020",
+       x = "Countries",
+       y = "Number of arrivals")
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
