--- a/TourismProject.qmd
+++ b/TourismProject.qmd
@@ -576,17 +576,31 @@ Tab <- inner_join(TabD,TabC,by=c('Code','Country'))
 print(Tab)|>knitr::kable()
 ```
 
+We want to estimate the following model : 
+
+$$Arrivals=\beta_0+\beta_1AverageExp+\beta_2Food+\beta_3Forest+\beta_4Happy+\beta_5GDP$$
+
 ```{r}
 reg1 <- lm (Tab$'2019_arrivals'~ Tab$'2019_avg'+ Tab$'2019_food' + Tab$'2019_forest' + Tab$'2019_happy' + Tab$'2019gdp' )
 summary(reg1)
 ```
+
+We notice that only a single explanatory variable is significant : `2019_arrivals`.   
+In fact, looking at the value of the t-stat, we have $t_{\beta_1}=4.748$ and since $t^{-1}_{27}(1-\frac{0.05}{2})=2.052$, we get $t_{\beta_1}>t^{-1}_{27}$.    
+For all the others explenatory variable, we have the opposite, meaning that they are not significant.    
+
+We do the same but now for the second year of our study :
+
 
 ```{r}
 reg2 <- lm (Tab$'2020_arrivals'~ Tab$'2020_avg'+ Tab$'2020_food' + Tab$'2020_forest' + Tab$'2020_happy' + Tab$'2020gdp' )
 summary(reg2)
 ```
 
+Once again, the only significant variable is `2020_arrivals`.  
+    
 
+However, one should pay attention to the value of our adjusted $R^2$. In fact, in both cases, $R^2$ is not high enough (respectively $0.382$ and $0.283$). Thus, maybe this linear regression with thoses explanatory vriable is not the best, maybe the unsignificant variable are downgrading the quality of our model, suggesting that those variables may not explain the number of arrivals in a country.  
 
 
 
